--- a/name.tex
+++ b/name.tex
@@ -62,6 +62,7 @@
 \newcommand{\soft}[1]{}
 \newcommand{\nopreview}[1]{}
 \newcommand\comment[1]{{\color{red}#1}}
+\newcommand\michael[1]{{\color{red}(#1)}}
 \newcommand\mhahn[1]{{\color{red}(#1)}}
 \newcommand\becky[1]{{\color{blue}(#1)}}
 \newcommand\note[1]{{\color{red}(#1)}}
@@ -962,7 +963,7 @@ Assertive   && \korean{하겠다}  & \korean{하겠어}  & \korean{하겠어요}
 &&  px+ep+ef          & pvg+ep+ef   & pvg+ep+ef+jxf & pvg+ep+ef\\
 \hline
 \end{tabular}
-	\caption{Correspondence between our morpheme segmentation and the paradigm of \textit{hada} `to do' as described by Wiktionary and in the Kaist treebank. In each cell, we provide the Hangul (e.g., \korean{한다}) and transliterated (e.g., handa) forms given by Wiktionary, a representation in terms of underlying morphemes (e.g., -\textsc{n}$_6$-\textsc{da}$_7$), and -- where available -- how the form is segmented in the Kaist corpus (e.g., \korean{하+ㄴ다} and px+ef).}\label{tab:korean-hada-1}
+	\caption{Correspondence between our morpheme segmentation and the paradigm of \textit{hada} `to do' as described by Wiktionary and in the Kaist treebank. In each cell, we provide the Hangul  and transliterated (e.g., handa) forms given by Wiktionary, a representation in terms of underlying morphemes (e.g., -\textsc{n}$_6$-\textsc{da}$_7$), and -- where available -- how the form is segmented in the Kaist corpus (e.g., px+ef).}\label{tab:korean-hada-1} % (e.g., \korean{한다})\korean{하+ㄴ다} and 
 \end{table}
 
 \begin{table}
@@ -1068,6 +1069,50 @@ Motive && \korean{하려고} \\
 %NOMINALIZER-nominalizer-formal-nonpolite-m 	& M & 216 \\
 %\end{longtable}
 
+\subsection{Finnish Verb Inflection}
+
+\url{https://en.wiktionary.org/wiki/tulla#Conjugation}
+
+\begin{table}
+\begin{tabular}{lllllll}
+	present tense & 	1st sing& 	tulen  & -n$_4$\\ 
+Karlsson section 24	&	2nd sing. 	& 	tulet  & -t$_4$\\ 
+	&	3rd sing. 	& 	tulee  & -V$_4$\\                
+	&	1st plur. 	& 	tulemme  &-mme$_4$\\ 
+	&	2nd plur. 	& 	tulette  &-tte$_4$\\ 
+	&	3rd plur. 	& 	tulevat  &-vat$_4$\\ 
+	&	passive 	& 	tullaan  &-t$_1$-Vn$_4$ & Karlsson section 69\\  \hline
+past tense 	 	&	1st sing.& 	tulin & -i$_2$-n$_4$\\  
+	Karlsson section 60&	2nd sing. &	tulit  & -i$_2$-t$_4$\\ 
+	&	3rd sing. &	tuli  & -i$_2$-V$_4$\\ 
+	&	1st plur. &	tulimme  &-i$_2$-mme$_4$\\ 
+	&	2nd plur. &	tulitte  &-i$_2$-tte$_4$\\ 
+	&3rd plur. &	tulivat  & -i$_2$-vat$_4$\\ 
+	&	passive &	tultiin  &-t$_1$-i$_2$-Vn$_4$ \\  \hline
+conditional mood  &1st sing. &	tulisin  & -isi$_3$-n$_4$\\ 
+	(-isi-) Karlsson section 65	&2nd sing. &	tulisit  & -isi$_3$-t$_4$\\ 
+	&3rd sing. &	tulisi  & -isi$_3$-V$_4$\\ 
+	&1st plur. &	tulisimme  & -isi$_3$-mme$_4$\\ 
+	&2nd plur. &	tulisitte  & -isi$_3$-tte$_4$\\ 
+	&3rd plur. &	tulisivat  & -isi$_3$-vat$_4$ \\ 
+	&passive &	tultaisiin  & -ta$_1$-isi$_3$-Vn$_4$\\  \hline
+	imperative mood  &1st sing. &	-- \\ 
+	 Karlsson, section 66	 & 2nd sing. &	tule & - \\ 
+	&	3rd sing. &	tulkoon  & -koon\\ 
+	&	1st plur. &	tulkaamme  & -kaamme\\ 
+	&	2nd plur. &	tulkaa   & -kaa\\ 
+	&	3rd plur. 	&tulkoot  & -koot\\ 
+	&	passive 	&tultakoon  & -takoon\\ \hline
+	potential mood 	 &	1st sing. &	tullen  & -ne$_3$-n$_4$\\ 
+		(-ne-) Karlsson section 67 & 2nd sing. &	tullet  & -ne$_3$-t$_4$\\ 
+	&	3rd sing. &	tullee  & -ne$_3$-V$_4$\\ 
+	&	1st plur. &	tullemme  & -ne$_3$-mme$_4$\\ 
+	&	2nd plur. &	tullette  & -ne$_3$-tte$_4$\\ 
+	&	3rd plur. &	tullevat  & -ne$_3$-vat$_4$\\ 
+	&	passive &	tultaneen  & -t$_1$-ne$_3$-Vn$_4$ \\ 
+\end{tabular}
+	\caption{Finnish verb inflection}
+\end{table}
 
 \subsection{Turkish Verb Suffixes}
 
