Updates from Overleaf

--- a/name.tex
+++ b/name.tex
@@ -1194,44 +1194,57 @@ Agreement (Obj+Subj)         & EK & 1sg indefinite present & \cite{rounds2001hun
 Ind & Pres   &  I    & teszek &	teszel &	tesz &	teszünk &	tesztek &	tesznek \\
     &        &       & csinálok &	csinálsz &	csinál &	csinálunk &	csináltok &	csinálnak \\
    &&&  ismerek &	ismersz &	ismer &	ismerünk &	ismertek &	ismernek \\
- &    &      & -\textsc{ek}$_5$ &	-\textsc{el}$_5$ &	- &	-\textsc{unk}$_5$ &	-\textsc{tek}$_5$ &	-\textsc{nek}$_5$ \\ \hline
+ &    &      & -\textsc{ek}$_5$ &	-\textsc{el}$_5$ &	-- &	-\textsc{unk}$_5$ &	-\textsc{tek}$_5$ &	-\textsc{nek}$_5$ & Rounds 4.3.1.1 \\
+ &    &      & -ek & -sz & -- & -{\"u}nk & -tek & -nek\\ \hline
    &&  D    & teszem &	teszed &	teszi &	tesszük &	teszitek &	teszik \\
    &&       & csinálom &	csinálod &	csinálja &	csináljuk &	csináljátok &	csinálják \\
   &&& ismerem &	ismered &	ismeri &ismerjük &	ismeritek &	ismerik \\
-&&      & -\textsc{em} &	-\textsc{ed} &	-\textsc{i} &	-\textsc{iuk} &	-\textsc{itek} &	-\textsc{ik} \\ \hline
+&&      & -\textsc{em} &	-\textsc{ed} &	-\textsc{i} &	-\textsc{iuk} &	-\textsc{itek} &	-\textsc{ik} & Rounds 4.3.1.2 \\ 
+&&      & -em & -ed & -i & -j{\"u}k & -itek & -ik \\\hline
    &&      & teszlek \\ \hline\hline
 & Past &     I    &tettem &	tettél &	tett &	tettünk &	tettetek &	tettek \\
 &      &          & csináltam &	csináltál &	csinált &	csináltunk &	csináltatok &	csináltak \\
 &&&ismertem &	ismertél &	ismert &	ismertünk &	ismertetek &	ismertek \\
-	    &  &         &-\textsc{t}$_3$-EM &	-\textsc{t}$_3$-EL &	-T &	-\textsc{t}-UNK &	-\textsc{t}$_3$-TEK &	-\textsc{t}$_3$-\textsc{ek} \\ \hline
+	    &  &         &-\textsc{t}$_3$-EM &	-\textsc{t}$_3$-EEL &	-T &	-\textsc{t}-UNK &	-\textsc{t}$_3$-TEK &	-\textsc{t}$_3$-\textsc{ek} & (Rounds 4.3.3.1)\\ 
+	    &  &        &-t-em & -t-{\'e}l & -t & -t-{\"u}nk & -t-etek & -t-ek \\
+	    \hline
  & &   D    &tettem &	tetted &	tette &	tettük &	tettétek &	tették \\
  & &        & csináltam &	csináltad &	csinálta &	csináltuk &	csináltátok &	csinálták \\
 &&& ismertem &	ismerted &	ismerte &	ismertük &	ismertétek 	&ismerték \\
-	    & &       &-\textsc{t}-EM &	-\textsc{t}-ED &	-\textsc{t}-I &	-\textsc{t}-UK &	-\textsc{t}-I-TEK &	-\textsc{t}-I-\textsc{ek} \\ \hline
-  &&       &tettelek \\ \hline
+        &  &      & -t-em & -t-ed & -t-e & -t-{\"u}k & -t-{\'e}tek & -t-{\'e}k \\
+	    & &       &-\textsc{t}-EM &	-\textsc{t}-ED &	-\textsc{t}-I &	-\textsc{t}-UK &	-\textsc{t}-EETEK &	-\textsc{t}-\textsc{eek}  & (Rounds 4.3.3.2) \\ \hline
+  &&       &tettelek \\ 
+  &&       & -T-ELEK  & (Rounds 4.3.3.2) \\
+  \hline
 Cond  &Pres &   I    &tennék &	tennél &	tenne &	tennénk &	tennétek &	tennének \\
       &     &        & csinálnék &	csinálnál &	csinálna &	csinálnánk 	&csinálnátok &	csinálnának \\
   &&&    ismernék &	ismernél &	ismerne &	ismernénk &	ismernétek &	ismernének \\
-  & &   I    &-\textsc{n}$_2$-EK &	-\textsc{n}$_2$-EL &	-\textsc{n}$_2$ &	-\textsc{n}$_2$-ENK &	-\textsc{n}$_2$-TEK &	-\textsc{n}$_2$-\textsc{nek} \\\hline
+  & &   I    &-\textsc{ne}$_2$-EK &	-\textsc{ne}$_2$-EL &	-\textsc{ne}$_2$ &	-\textsc{ne}$_2$-ENK &	-\textsc{ne}$_2$-ETEK &	-\textsc{ne}$_2$-\textsc{enek} & (Rounds 4.3.7.1) \\
+  &&& -n{\'e}k & -n{\'e}l & -ne & -n{\'e}nk & -n{\'e}tek & -n{\'e}nek \\
+  \hline
    &&  D    &tenném &	tennéd &	tenné &	tennénk &	tennétek &	tennék \\
    &&       & csinálnám &	csinálnád &	csinálná &	csinálnánk &	csinálnátok &	csinálnák \\
  &&&  ismerném &	ismernéd &	ismerné &	ismernénk 	&ismernétek &	ismernék \\
-&&      &-\textsc{n}$_2$-EM &	-\textsc{n}$_2$-ED &	-\textsc{n}$_2$-I &	-\textsc{n}$_2$-ENK &	-\textsc{n}$_2$-TEK &	-\textsc{n}$_2$-EK \\ \hline
+&&      &-\textsc{ne}$_2$-EM &	-\textsc{ne}$_2$-ED &	-\textsc{ne}$_2$-E &	-\textsc{ne}$_2$-ENK &	-\textsc{ne}$_2$-ETEK &	-\textsc{ne}$_2$-EK & (Rounds 4.3.7.2) \\
+&&&     -n{\'e}m & -n{\'e}d & -n{\'e} & -n{\'e}nk & -n{\'e}tek & -n{\'e}k & -n{\'e}lek \\ \hline
        &&  &tennélek \\ \hline
 Subj & Pres & I         &tegyek &	tégy or tegyél &	tegyen &	tegyünk &	tegyetek &	tegyenek \\
      &      &           & csináljak &	csinálj or
 csináljál &	csináljon &	csináljunk& 	csináljatok &	csináljanak \\
 &&&ismerjek &	ismerj or
 ismerjél &	ismerjen &	ismerjünk &	ismerjetek &	ismerjenek \\
- &  &          &-\textsc{j}$_2$-\textsc{ek} &	\textsc{j}$_2$-\textsc{el} &	-\textsc{j}$_2$-\textsc{en} &	-\textsc{j}$_2$-UNK &	-\textsc{j}$_2$-TEK &	-\textsc{j}$_2$-\textsc{nek} \\ \hline
+ &  &          &-\textsc{j}$_2$-\textsc{ek} &	\textsc{j}$_2$-\textsc{eel} &	-\textsc{j}$_2$-\textsc{en} &	-\textsc{j}$_2$-UNK &	-\textsc{j}$_2$-TEK &	-\textsc{j}$_2$-\textsc{nek} & Rounds 4.3.5.1\\
+ & &          & -j-ek & -j-({\'e}l) & -j-en & -j-{\"u}nk & -j-etek & -j-enek \\
+ \hline
 &&D         &tegyem &	tedd or tegyed &	tegye &	tegyük& 	tegyétek &	tegyék \\
 &&          & csináljam &	csináld or
 csináljad &	csinálja &	csináljuk &	csináljátok &	csinálják \\
 &&&ismerjem &	ismerd or
 ismerjed &	ismerje &	ismerjük &	ismerjétek & ismerjék
  \\
-&&         &-\textsc{j}-\textsc{em} &	-\textsc{j}-\textsc{ED} &	-\textsc{j}-I &	-\textsc{j}-UK & 	-\textsc{j}-\textsc{itek} &	-\textsc{j}-\textsc{ik}- \\ \hline
-  &&       &tegyelek \\
+&&         &-\textsc{j}-\textsc{em} &	-\textsc{j}-\textsc{ED} &	-\textsc{j}-E &	-\textsc{j}-UK & 	-\textsc{j}-\textsc{eetek} &	-\textsc{j}-\textsc{eek}- & (Rounds 4.3.5.2)\\ 
+  &&       & -j-em & -j-ed & -j-e & -j-{\"u}k & -j-{\'e}tek & -j-{\'e}k\\ \hline
+  &&       &tegyelek & (Rounds 4.3.5.2)\\
     \end{tabular}
     }
     \caption{Hungarian verb suffixes (tense, mood, definitiness, person/number).}
