--- a/literature.bib
+++ b/literature.bib
@@ -57782,3 +57782,119 @@ African Linguistics",
 	publisher="Oxford University Press"
 }
 
+@article{humboldt1836uber,
+	title="Über die Verschiedenheit des menschlichen Sprachbaues und ihren Einfluss auf die geistige Entwickelung des Menschengeschlechts",
+	author="Wilhelm von {Humboldt}",
+	year="1836"
+}
+
+
+@article{greenberg1960a,
+	title="A Quantitative Approach to the Morphological Typology of Language",
+	author="Joseph H. {Greenberg}",
+	journal="International Journal of American Linguistics",
+	volume="26",
+	number="3",
+	pages="178--194",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/2074999873",
+	year="1960"
+}
+
+
+@book{palmer1986mood,
+	title="Mood and modality",
+	author="F. R. {Palmer}",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/2066307562",
+	year="1986"
+}
+
+@article{narrog2005modality,
+	title="Modality, mood, and change of modal meanings: A new perspective",
+	author="Heiko {Narrog}",
+	journal="Cognitive Linguistics",
+	volume="16",
+	number="4",
+	pages="677--731",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/2052463383",
+	year="2005"
+}
+
+
+
+@article{depraetere2020mood,
+	title="Mood and Modality in English",
+	author="Ilse {Depraetere} and Susan {Reed}",
+	journal="The Handbook of English Linguistics",
+	pages="269--290",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/1514427956",
+	year="2020"
+}
+
+@article{auwera2016the,
+	title="The history of modality and mood",
+	author="Johan Van Der {Auwera} and Alfonso Zamorano {Aguilar}",
+	journal="The Oxford handbook of modality and mood. - Oxford, 2016",
+	pages="9--27",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/1158309864",
+	year="2016"
+}
+
+
+@book{portner2018mood,
+	author="Paul Portner",
+	title="Mood",
+	publisher="Oxford University Press",
+	year="2018"
+}
+
+@book{palmer1986mood,
+	title="Mood and modality",
+	author="F. R. {Palmer}",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/2066307562",
+	year="1986"
+}
+
+
+@book{bybee1994the,
+	title="The Evolution of Grammar: Tense, Aspect, and Modality in the Languages of the World",
+	author="Joan L. {Bybee} and Revere D. {Perkins} and William {Pagliuca}",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/620256024",
+	year="1994"
+}
+
+@book{klein1994time,
+	title="Time in language",
+	author="Wolfgang {Klein}",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/1568406678",
+	year="1994"
+}
+
+
+@book{binnick2012the,
+	title="The Oxford handbook of tense and aspect",
+	author="Robert I. {Binnick}",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/631188365",
+	year="2012"
+}
+
+
+@article{yip1987case,
+	title="Case in Tiers",
+	author="Moira {Yip} and Joan {Maling} and Ray {Jackendoff}",
+	journal="Language",
+	volume="63",
+	number="2",
+	pages="217",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/2316810641",
+	year="1987"
+}
+
+
+@incollection{aikhenvald2003evidentiality,
+	title="Evidentiality in typological perspective",
+	author="Alexandra Y. {Aikhenvald}",
+	pages="1--31",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/25226750",
+	year="2003"
+}
+
